practice/netpol/1/deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-except-dns
spec:
  policyTypes:
  - Ingress
  - Egress
  podSelector: {}
  egress:
  - ports:
    - port: 53
      protocol: TCP
    - port: 53
      protocol: UDP
