practice/netpol/1/nginx05-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx05
spec:
  policyTypes:
  - Ingress
  - Egress
  podSelector:
    matchLabels:
      run: nginx05
  ingress:
  - from:
    - podSelector:
        matchExpressions:
        - key: run
          operator: In
          values: [httpd05, redis05]
    ports:
    - port: 80
      protocol: TCP
  egress:
  - to:
    - podSelector:
        matchLabels:
          run: httpd05
    ports:
    - port: 80
      protocol: TCP
  - to: 
    - podSelector:
        matchLabels:
          run: redis05
    ports:
    - port: 6379
      protocol: TCP
