practice/netpol/1/only-dns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: only-dns
spec:
  policyTypes:
  - Ingress
  - Egress
  podSelector: {}
  egress:
  - ports:
    - port: 53
      protocol: TCP
    - port: 53
      protocol: UDP
