practice/netpol/1/redis05-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis05
spec:
  policyTypes:
  - Ingress
  - Egress
  podSelector:
    matchLabels:
      run: redis05
  ingress:
  - from:
    - podSelector:
        matchLabels:
          run: nginx05
    ports:
    - port: 6379
      protocol: TCP
  egress:
  - to:
    - podSelector:
        matchLabels:
          run: nginx05
    ports:
    - port: 80
      protocol: TCP
